cmake_minimum_required(VERSION 3.28)
project(CMakeSFMLProject LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.2
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
FetchContent_MakeAvailable(SFML)

add_executable(Tetris src/main.cpp favicon/resource.rc)
target_compile_features(Tetris PRIVATE cxx_std_17)
target_link_libraries(Tetris PRIVATE SFML::Graphics)

set(RESOURCE_SOURCE_DIR "${PROJECT_SOURCE_DIR}/favicon")
set(RESOURCE_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/favicon")
file(COPY "${RESOURCE_SOURCE_DIR}/" DESTINATION "${RESOURCE_DEST_DIR}")

set(RESOURCE_SOURCE_DIR "${PROJECT_SOURCE_DIR}/img")
set(RESOURCE_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/img")
file(COPY "${RESOURCE_SOURCE_DIR}/" DESTINATION "${RESOURCE_DEST_DIR}")

set(RESOURCE_SOURCE_DIR "${PROJECT_SOURCE_DIR}/fonts")
set(RESOURCE_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/fonts")
file(COPY "${RESOURCE_SOURCE_DIR}/" DESTINATION "${RESOURCE_DEST_DIR}")